# boilerplate_rust

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.ps1  build.sh  task.md
.github/: README.md  dependabot.yml
.github/workflows/: README.md  build.yml  ci.yml  nightly.yml  release.yml  security.yml
src/: app.rs  config.rs  main.rs
src/renderer/: cube.rs  mod.rs  shader.rs
src/ui/: gl_viewport.rs  mod.rs
tests/: integration_tests.rs  test_esc.py
