[package]
name = "egui_opengl_app"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "0.32.1"
egui_glow = "0.32.1"
egui-winit = "0.32.1"
glow = "0.16.0"
glutin = "0.32.3"
glutin-winit = "0.5.0"
winit = "0.30.12"
raw-window-handle = "0.6.2"
clap = { version = "4.5.48", features = ["derive"] }
nalgebra-glm = "0.20.0"
bytemuck = "1.23.2"
rfd = "0.15.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.145"
dirs = "6.0.0"

[dev-dependencies]

[profile.release]
opt-level = 3
lto = true